[gd_scene load_steps=4 format=2]

[ext_resource path="res://Minigames/Spaceship/Boosts/Boost.gd" type="Script" id=1]
[ext_resource path="res://Minigames/Spaceship/Boosts/Boost.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16.2961, 16.0456 )

[node name="Boost" type="Area2D"]
collision_layer = 4
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Particles2D" type="CPUParticles2D" parent="."]
position = Vector2( -1.25566, 0.192688 )
amount = 20
lifetime = 5.0
explosiveness = 0.5
randomness = 0.1
emission_shape = 1
emission_sphere_radius = 15.0
gravity = Vector2( 0, 0 )
initial_velocity = 0.0
angular_velocity = 30.0
angular_velocity_random = 1.0
scale_amount = 8.0
scale_amount_random = 0.6
color = Color( 0.171875, 1, 0, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.193621, 0.167423 )
shape = SubResource( 1 )

[node name="BoostIcon" type="TextureRect" parent="."]
margin_left = -10.0
margin_top = -10.0
margin_right = 10.0
margin_bottom = 10.0
expand = true

[node name="DestroyTime" type="Timer" parent="."]
wait_time = 3.0

[connection signal="body_entered" from="." to="." method="_on_Boost_body_entered"]
[connection signal="timeout" from="DestroyTime" to="." method="_on_DestroyTime_timeout"]
